Fix bug causing text to overlap with phone when browser was too narrow and short

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 .main-container {
   display: inline-block;
   justify-content: space-between;
-  max-height: 100vh;
+  /* max-height: 100vh; */
   width: 100%;
   margin: auto;
 }
